example/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-static
  labels:
    app: example
    role: static
spec:
  replicas: 2
  selector:
    matchLabels:
      app: example
      role: static
  template:
    metadata:
      labels:
        app: example
        role: static
    spec:
      containers:
        - name: example-static
          image: ghcr.io/valerauko/rokalyuk:5be7be1
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
