example/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
  labels:
    app: example
    role: static
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: example
    role: static
