example/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example
  labels:
    app: example
    role: static
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - rokalyuk.kitsune.social
  rules:
    - host: rokalyuk.kitsune.social
      http:
        paths:
          - backend:
              serviceName: example
              servicePort: http
